crates/wac-parser/tests/resolution/fail/duplicate-world-export.wac
world w {
    export x: func();
    export x: func();
}